@@ -18,13 +18,6 @@
 
   <dependencyManagement>
     <dependencies>
-
-      <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <scope>runtime</scope>
-      </dependency>
-
       <!-- Spring Boot Dependency Management -->
       <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -124,12 +117,6 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>com.oktayosman.ticketcenter.TicketCenterApplication</mainClass>
-          <options>
-            <option>--module-path</option>
-            <option>/Users/oktayosman/Downloads/javafx-sdk-17.0.13/lib</option>
-            <option>--add-modules</option>
-            <option>javafx.controls,javafx.fxml</option>
-          </options>
         </configuration>
       </plugin>
 
@@ -138,7 +125,6 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>${spring-boot.version}</version>
         <configuration>
-          <jvmArguments>--module-path /Users/oktayosman/Downloads/javafx-sdk-17.0.13/lib --add-modules javafx.controls,javafx.fxml</jvmArguments>
         </configuration>
       </plugin>
 
